# andp

./: .gitignore  .gitlab-ci.yml  AGENT_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  ITERATIONS.md  Jenkinsfile  README.md  SECURITY.md  action.yml  archive.sh  artifact-manager.sh  asc-manager.sh  azure-pipelines.yml  build-matrix.sh  build.sh  dashboard.html  generate.sh  localization-manager.sh  metadata-manager.sh  project.yml  pyproject.toml  release-manager.sh  secrets.example.yml  sign.sh  simulator-manager.sh  test-matrix.sh  test-report.sh  test.sh  version-manager.sh
.github/workflows/: andp-release.yml  pipeline.yml  publish-readiness.yml  pypi-publish.yml
.jules/: bolt.md  palette.md
Apps/Meeshy/: ContentView.swift  main.swift
Apps/MeeshyMac/: Localizable.strings  MeeshyMacApp.swift
Apps/MeeshyTV/: MeeshyTVApp.swift
Apps/MeeshyTests/: MeeshyTests.swift
Apps/MeeshyUITests/: MeeshyUITests.swift
Apps/MeeshyVision/: MeeshyVisionApp.swift
Apps/MeeshyWidgets/: Info.plist  MeeshyWidgets.swift
Documentation/: ASC-API.md  AgentGuide.md  Agents.md  BuildNumber.md  Developer.md  Governance.md  Metadata.md  Migration.md  Operations.md  PublishReadiness.md  Security.md  StoreConfig.md  Troubleshooting.md
Documentation/Architecture/: Diagrams.md
andp/: __init__.py  buildnum.py  cli.py  mcp.py  policy.py  precheck.py  publish.py  readiness.py  service.py
infrastructure/: accessibility-validator.py  ai-analyzer.py  analytics-manager.sh  asset-validator.sh  bootstrap.sh  certificate-manager.sh  dependency-analyzer.py  generate-dashboard.sh  governance-report.sh  localization-validator.py  performance-monitor.py  pipeline-generator.py  prepare-remote-node.sh  sbom-generator.sh  security-auditor.sh  simulator-manager.sh  telemetry-collector.sh  validate-project.sh  visual-compare.sh  visual-comparer.swift
tests/: conftest.py  test_agerating.py  test_apps.py  test_appstore.py  test_appstore_path.py  test_asc_manager_cli.py  test_asc_verify.py  test_assets.py  test_auth.py  test_availability.py  test_buildnum.py  test_buildnum_cli.py  test_builds.py  test_builds_latest.py  test_cli_release_sub.py  test_client.py  test_config.py  test_core_errors.py  test_core_release.py  test_core_state.py  test_hardening.py  test_json_output.py  test_mcp.py  test_mcp_ship.py  test_mcp_store.py  test_mcp_v2.py  test_metadata_sync.py  test_precheck.py  test_precheck_cli.py  test_precheck_hardening.py  test_precheck_store.py  test_previews.py  test_pricing.py  test_provisioning.py  test_publish.py  test_publish_cli.py  test_publish_coverage.py  test_publish_hardening.py  test_readiness.py  test_readiness_cli.py  (+11 more)
(+62 files in other folders)
