[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "andp"
version = "1.7.0"
description = "ANDP — API-first App Store Connect publishing: honest preflight, pure Build Upload API, provisioning and TestFlight by API."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Sylorion", email = "jcnm@sylorion.com" }]
dependencies = [
    "requests>=2.28",
    "PyYAML>=6.0",
    "PyJWT>=2.6",
    "cryptography>=41.0",
]

[project.scripts]
andp = "andp.cli:main"

[tool.setuptools.packages.find]
include = ["andp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest (<8.0.0)"
]
