[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "andp"
version = "1.13.1"
description = "ANDP — API-first App Store Connect publishing: honest preflight, pure Build Upload API, provisioning and TestFlight by API."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Sylorion", email = "jcnm@sylorion.com" }]
keywords = [
    "app-store-connect", "ios", "testflight", "app-store", "apple",
    "ci", "publishing", "deliver", "fastlane-alternative", "devops",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.28",
    "PyYAML>=6.0",
    "PyJWT>=2.6",
    "cryptography>=41.0",
]

[project.urls]
Homepage = "https://github.com/isopen-io/andp"
Repository = "https://github.com/isopen-io/andp"
Documentation = "https://github.com/isopen-io/andp/tree/main/Documentation"
Changelog = "https://github.com/isopen-io/andp/blob/main/CHANGELOG.md"
Issues = "https://github.com/isopen-io/andp/issues"

[project.scripts]
andp = "andp.cli:main"

[tool.setuptools.packages.find]
include = ["andp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest (<8.0.0)"
]
